# athenaeum-mcp

./: .gitignore  .tool-versions  AGENTS.md  Cargo.toml  README.md  cobertura.xml  flake.nix  metadata.json
.github/: dependabot.yml
.spar/: brief.md  plan.md
crates/core/: Cargo.toml
crates/core/src/: config.rs  embed.rs  engine.rs  error.rs  lib.rs  search.rs  store.rs
crates/ingest/: Cargo.toml
crates/ingest/eval/: queries.toml
crates/ingest/src/: chunking.rs  discovery.rs  error.rs  extract.rs  ingest.rs  lib.rs
crates/ingest/tests/: epub_extraction.rs  ingest_pipeline.rs  keep_going.rs  markdown_ingestion.rs
crates/ingest/tests/fixtures/: sample.md
crates/mcp-server/: Cargo.toml
crates/mcp-server/src/: main.rs
crates/parser-spike/: Cargo.toml
crates/parser-spike/src/: error.rs  lib.rs
crates/parser-spike/tests/: integration_test.rs
crates/parser-spike/tests/fixtures/: sample.epub
docs/: INGESTION_PIPELINE_COMPLETION.md  architecture.md  decision-brief.md  ingestion.md  integration.md  relevance-eval.md  setup.md
docs/adr/: 0001-language-rust-over-typescript.md
docs/archive/: knowledge-engine-design-brief.md  knowledge-engine-idea-brief.md
docs/plans/: embed-timeout-hardening.md  step-2-mcp-server.md  step-3-ingestion-pipeline.md  step-4-coverage-push.md
