[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
edition      = "2021"
version      = "0.1.0"
license      = "MIT"
rust-version = "1.96"

[workspace.dependencies]
# Async runtime
tokio        = { version = "1", features = ["full"] }

# Error handling
thiserror    = "2"
anyhow       = "1"

# Serialisation
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"

# HTTP client (rustls — no OpenSSL on the host)
reqwest      = { version = "0.13", default-features = false, features = ["json", "rustls"] }

# Embedding storage
lancedb      = "0.30"   # latest: 0.30.0
arrow-array  = "58"     # must match the version lancedb 0.30 exposes
arrow-schema = "58"     # must match arrow-array

# MCP server
rmcp         = { version = "1.7", features = ["server", "transport-io"] }   # latest: 1.7.0

# Async utilities
futures      = "0.3"
async-trait  = "0.1"

# Document parsing
pdfium-render = { version = "0.9", features = ["thread_safe", "pdfium_latest"] }   # latest: 0.9.2
epub          = "2"                                         # latest: 2.1.5

# Testing
tempfile     = "3"
