[package]
name             = "athenaeum-core"
version.workspace     = true
edition.workspace     = true
license.workspace     = true
rust-version.workspace = true

[dependencies]
thiserror   = { workspace = true }
serde       = { workspace = true }
tokio       = { workspace = true }
serde_json  = { workspace = true }
reqwest     = { workspace = true }
lancedb     = { workspace = true }
arrow-array  = { workspace = true }
arrow-schema = { workspace = true }
futures     = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
tokio    = { workspace = true }
tempfile = { workspace = true }
