[package]
name             = "athenaeum-core"
version.workspace     = true
edition.workspace     = true
license.workspace     = true
rust-version.workspace = true

[features]
test-support = []

[dependencies]
thiserror   = { workspace = true }
serde       = { workspace = true }
tokio       = { workspace = true }
serde_json  = { workspace = true }
reqwest     = { workspace = true }
lancedb     = { workspace = true }
arrow-array  = { workspace = true }
arrow-schema = { workspace = true }
futures     = { workspace = true }
async-trait = { workspace = true }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)'] }

[dev-dependencies]
tokio    = { workspace = true }
tempfile = { workspace = true }
wiremock = "0.6"
