[package]
name             = "athenaeum-ingest"
version.workspace     = true
edition.workspace     = true
license.workspace     = true
rust-version.workspace = true

[dependencies]
athenauthem-core = { path = "../core" }
thiserror      = { workspace = true }
serde          = { workspace = true }
pdfium-render  = { workspace = true }
epub           = { workspace = true }
tokio          = { workspace = true }

[dev-dependencies]
tokio    = { workspace = true }
tempfile = { workspace = true }
