[package]
name             = "athenaeum-ingest"
version.workspace     = true
edition.workspace     = true
license.workspace     = true
rust-version.workspace = true

[[bin]]
name = "athenaeum-ingest"
path = "src/bin/athenaeum-ingest.rs"

[dependencies]
athenaeum-core = { path = "../core" }
thiserror      = { workspace = true }
serde          = { workspace = true }
pdfium-render  = { workspace = true }
epub           = { workspace = true }
tokio          = { workspace = true }
clap           = { version = "4", features = ["derive"] }
anyhow         = { workspace = true }

[dev-dependencies]
tokio    = { workspace = true }
tempfile = { workspace = true }
